--- a/npkpir_23/web/wspolny/sub/importklientow.xhtml
+++ b/npkpir_23/web/wspolny/sub/importklientow.xhtml
@@ -19,6 +19,7 @@
                               style="height: 90px;"> 
                 </p:fileUpload>
                 <p:growl life="3600"  id="messages2" showDetail="false"/>
+                <p:commandButton id="xlsbutton2" value="zapisz nowych klientów" actionListener="#{kontrahentImportView.zapiszKontrahentow()}" style=" margin-left: 5px;"  update="formimportklientow2" />
             </p:panelGrid>
         <p:messages  id="mes"/>
     </p:panelGrid>
