jest import cos sie jeszczde wysypuje ale nie ma czasu

--- a/npkpir_23/web/wspolny/sub/importklientow.xhtml
+++ b/npkpir_23/web/wspolny/sub/importklientow.xhtml
@@ -20,6 +20,7 @@
                 </p:fileUpload>
                 <p:growl life="3600"  id="messages2" showDetail="false"/>
                 <p:commandButton id="xlsbutton2" value="zapisz nowych klientów" actionListener="#{kontrahentImportView.zapiszKontrahentow()}" style=" margin-left: 5px;"  update="formimportklientow2" />
+<!--                komcio-->
             </p:panelGrid>
         <p:messages  id="mes"/>
     </p:panelGrid>
