--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_analiza.xhtml
@@ -217,7 +217,7 @@
                                         <h:outputText value="#{itempasekpotr.nieobecnosc.dniroboczenieobecnosci}"/>
                                     </p:column>
                                     <p:column headerText="godziny nieobec." width="40" style="text-align: center;">
-                                        <h:outputText value="#{itempasekpotr.liczbagodzinurlopu}"/>
+                                        <h:outputText value="#{itempasekpotr.liczbagodzinNieobecnosci}"/>
                                     </p:column>
                                     <p:column headerText="godziny robocze" width="40" style="text-align: center;">
                                         <h:outputText value="#{itempasekpotr.liczbagodzinobowiazku}"/>
