--- a/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_ekwiwalent_urlop.xhtml
@@ -47,13 +47,13 @@
                                     <h:outputText value="#{itempasekpotr.skladnikwynagrodzenia.rodzajwynagrodzenia.opisskrocony}"/>
                                 </p:column>
                                 <p:column headerText="dni" width="40" style="text-align: center;">
-                                    <h:outputText value="#{itempasekpotr.liczbadniurlopu}"/>
+                                    <h:outputText value="#{itempasekpotr.liczbadniNieobecnosci}"/>
                                 </p:column>
                                 <p:column headerText="stawka dzienna" width="40">
                                     <bcf:outputpl value="#{itempasekpotr.stawkadzienna}"/>
                                 </p:column>
                                 <p:column headerText="godziny" width="40" style="text-align: center;">
-                                    <h:outputText value="#{itempasekpotr.liczbagodzinurlopu}"/>
+                                    <h:outputText value="#{itempasekpotr.liczbagodzinNieobecnosci}"/>
                                 </p:column>
                                 <p:column headerText="stawka godzin." width="40">
                                     <bcf:outputpl value="#{itempasekpotr.stawkagodzinowa}"/>
@@ -82,13 +82,13 @@
                                     <h:outputText value="#{itempasekpotr1.skladnikwynagrodzenia.rodzajwynagrodzenia.opisskrocony}"/>
                                 </p:column>
                                 <p:column headerText="dni" width="40" style="text-align: center;">
-                                    <h:outputText value="#{itempasekpotr1.liczbadniurlopu}"/>
+                                    <h:outputText value="#{itempasekpotr1.liczbadniNieobecnosci}"/>
                                 </p:column>
                                 <p:column headerText="stawka dzienna" width="40">
                                     <bcf:outputpl value="#{itempasekpotr1.stawkadzienna}"/>
                                 </p:column>
                                 <p:column headerText="godziny" width="40" style="text-align: center;">
-                                    <h:outputText value="#{itempasekpotr1.liczbagodzinurlopu}"/>
+                                    <h:outputText value="#{itempasekliczbagodzinNieobecnosciurlopu}"/>
                                 </p:column>
                                 <p:column headerText="stawka godzin." width="40">
                                     <bcf:outputpl value="#{itempasekpotr1.stawkagodzinowa}"/>
