--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -152,7 +152,9 @@
                                             </p:column>-->
                     <p:row>
                         <p:column>
-                            <h:outputText value="#{itempasek.rok}/#{itempasek.mc}"/>
+                            <h:outputText value="#{itempasek.data}" rendered="#{itempasek.data ne null}">
+                                <f:convertDateTime locale="pl"/>
+                            </h:outputText>
                         </p:column>
                         <p:column>
                             <h:outputText value="brutto-zus"/>
